--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+etckeeper (1.18.21) UNRELEASED; urgency=medium
+
+  * Consistently use mktemp if available, falling back to tempfile
+    otherwise.
+    Thanks, Adam Dinwoodie
+
+ -- Joey Hess <id@joeyh.name>  Mon, 16 Jan 2023 11:42:05 -0400
+
 etckeeper (1.18.20) upstream; urgency=medium
 
   * Fix a reversion in etckeeper init in version 1.18.19.
