--- a/doc/todo/Consistent_tempfile_creation.mdwn
+++ b/doc/todo/Consistent_tempfile_creation.mdwn
@@ -4,3 +4,8 @@ I don't particularly mind how this is resolved, but I'd like it resolved in some
 
 - [Allow either `mktemp` or `tempfile` everywhere](https://github.com/me-and/etckeeper/commit/96d4da2314ad64147835554371d04372cb4a4612) (best for backwards compatibility, as it'll keep working for folk who don't have `mktemp`)
 - [Consistently assume `mktemp` is available](https://github.com/me-and/etckeeper/commit/3fb703588997590fec4776fb91e3b119ab3f75f9) (best for simplicity)
+
+> Thanks, I've applied the first patch. It looks like all the code that
+> assumed mktemp was available only ran when using darcs, so there are
+> presumably systems where mktemp is not available that the second patch
+> would break. [[done]] --[[Joey]]
