--- a/etckeeper.8
+++ b/etckeeper.8
@@ -60,12 +60,12 @@ uninit, then modify etckeeper.conf to use a different VCS, and then run
 etckeeper init. (The -f switch can be used to force uninit without
 prompting.)
 .SH FILES
-/etc/etckeeper/etckeeper.conf is the configuration file.
+/usr/local/etc/etckeeper/etckeeper.conf is the configuration file.
 
-/etc/etckeeper also contains directories containing the programs that are
+/usr/local/etc/etckeeper also contains directories containing the programs that are
 run for each of the above commands.
 .SH ENVIRONMENT VARIABLES
-ETCKEEPER_CONF_DIR path to configuration directory instead of default /etc/etckeeper.
+ETCKEEPER_CONF_DIR path to configuration directory instead of default /usr/local/etc/etckeeper.
 .SH SEE ALSO
 /usr/share/doc/etckeeper/README.md.gz
 .SH AUTHOR 
